--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Text Transform is utility app where you can perform various iterations on your text, you can also turn your text in binary and binaries into text"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
 
@@ -21,7 +21,7 @@
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-    <title>React App</title>
+    <title>Text Transform</title>
   </head>
   <body class="">
     <noscript>You need to enable JavaScript to run this app.</noscript>
